--- a/instagram_web/blueprints/users/templates/users/new.html
+++ b/instagram_web/blueprints/users/templates/users/new.html
@@ -1,1 +1,9 @@
-<h1>Users#new</h1>
+{% extends '__layout.html' %}
+
+{% block content %}
+<form action="{{url_for('users.create')}}">
+    <input type="text" name="" id="">
+    <input type="text" name="" id="">
+    <button type="submit">Submit.</button>
+</form>
+{% endblock %}
