trying to implement api post request

--- a/instagram_web/blueprints/users/templates/users/new.html
+++ b/instagram_web/blueprints/users/templates/users/new.html
@@ -1,9 +1,5 @@
 {% extends '__layout.html' %}
 
 {% block content %}
-<form action="{{url_for('users.create')}}">
-    <input type="text" name="" id="">
-    <input type="text" name="" id="">
-    <button type="submit">Submit.</button>
-</form>
+{{response}}
 {% endblock %}
