--- a/instagram_web/blueprints/establishments/templates/establishments/new.html
+++ b/instagram_web/blueprints/establishments/templates/establishments/new.html
@@ -3,7 +3,7 @@
 
 <h1>Register Establishment</h1>
 
-<form action="{{ url_for('establishment.create') }}" method="post">
+<form action="{{ url_for('establishments.create') }}" method="post">
     <div class="form-group">
         <label>Name:</label>
         <input type='text' name='name' class="form-control" />
