--- a/instagram_web/blueprints/establishments/templates/establishments/new_establishment.html
+++ b/instagram_web/blueprints/establishments/templates/establishments/new_establishment.html
@@ -4,6 +4,8 @@
 <h1>Register Establishment</h1>
 
 <form action="{{ url_for('establishments.create_establishment') }}" method="post">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+
     <div class="form-group">
         <label>Name:</label>
         <input type='text' name='name' class="form-control" />
