--- a/team_osm_web/blueprints/establishments/templates/establishments/new_establishment.html
+++ b/team_osm_web/blueprints/establishments/templates/establishments/new_establishment.html
@@ -16,6 +16,11 @@
         <input type='text' name='address' class="form-control" />
     </div>
 
+    <div class="form-group">
+        <label>Hospital Type:</label>
+        <input type='text' name='hospital_type' class="form-control" />
+    </div>
+
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 /
