moving out event functions into their own folder. and adding delete button for events

--- a/team_osm_web/blueprints/events/templates/events/index.html
+++ b/team_osm_web/blueprints/events/templates/events/index.html
@@ -25,7 +25,10 @@
     <div>
         {{event.establishment.name}}
     </div>
-
+    <br>
+    ///
+    <a href="{{url_for('events.delete', event.id)}}">Delete.</a>
+    ///
 </div>
 <hr>
 {% endfor %}
