resolving reference issues due to new folders

--- a/team_osm_web/templates/macro/navbar.html
+++ b/team_osm_web/templates/macro/navbar.html
@@ -42,7 +42,7 @@
 
                     <a class="dropdown-item" href="{{ url_for('establishments.new_establishment') }}">Establishment</a>
 
-                    <a class="dropdown-item" href="{{ url_for('establishments.new_events') }}">Event</a>
+                    <a class="dropdown-item" href="{{ url_for('events.new') }}">Event</a>
 
                     <a class="dropdown-item" href="{{ url_for('establishments.new_blood_inventory') }}">Blood
                         Inventory</a>
