fixing render template for events index

--- a/team_osm_web/blueprints/events/templates/events/new_events.html
+++ b/team_osm_web/blueprints/events/templates/events/new_events.html
@@ -41,5 +41,5 @@
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 /
-<a href="{{ url_for('events.index') }}">Home</a>
+<a href="{{ url_for('home') }}">Home</a>
 {% endblock %}
