--- a/team_osm_web/templates/macro/navbar.html
+++ b/team_osm_web/templates/macro/navbar.html
@@ -17,7 +17,7 @@
                 {% endif %}
 
                 {% if current_user.is_authenticated %}
-                <a class="nav-link" href="{{ url_for('events.index') }}">News
+                <a class="nav-link" href="{{ url_for('events.show') }}">News
                     Feed
                     <span class="sr-only">(current)</span></a>
                 {% endif %}
