--- a/team_osm_web/blueprints/events/templates/events/index.html
+++ b/team_osm_web/blueprints/events/templates/events/index.html
@@ -27,7 +27,7 @@
     </div>
     <br>
     ///
-    <a href="{{url_for('events.delete', event.id)}}">Delete.</a>
+    <!-- <a href="{{url_for('events.delete', event.id)}}">Delete.</a> -->
     ///
 </div>
 <hr>
