fixing url-for in index.html

--- a/team_osm_web/blueprints/events/templates/events/index.html
+++ b/team_osm_web/blueprints/events/templates/events/index.html
@@ -26,7 +26,7 @@
     </div>
     <br>
     ///
-    <!-- <a href="{{url_for('events.delete', event.id)}}">Delete.</a> -->
+    <a href="{{url_for('events.delete', id=event.id)}}">Delete.</a>
     ///
 </div>
 <hr>
